# sfpong

./: .gitignore  CMakeLists.txt  ISSUES.md  Joystick input grammar.txt  LICENCE  README.md  at_scope.h  ci_string.h  common.h  config.cpp  convert.cpp  convert.h  copydlls.bat  default-guts.info  entities.cpp  entities.h  game.cfg  game.cpp  game.h  game_config.h  game_ents.cpp  game_ents.h  game_input.h  gvar.h  imgui_ext.cpp  imgui_ext.h  imgui_inc.h  imgui_scoped.h  input.cpp  input.h  joyinput.cpp  joyinput.h  main.cpp  menu.cpp  menu.h  postbuild.bat  program.cpp  rng.h  serial_map.h  sfPong.sln  (+7 more)
Tests/: Test.vcxproj  Test.vcxproj.filters  tests.cpp
scripts/: robocopy.ps1
